--- a/pom.xml
+++ b/pom.xml
@@ -36,4 +36,12 @@
             </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub OWNER Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/Ztrun</url>
+        </repository>
+    </distributionManagement>
 </project>
